--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -63,11 +63,13 @@
 .top-bar {
 
   h1 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: bold;
+    margin:0;
   }
   position: fixed;
   top: 0;
+  padding-top:2px;
   z-index: 2;
   width: 100vw;
   height: $bar-height;
@@ -78,7 +80,7 @@
     margin: 0;
   }
 
-  .user-settings {
+  .user-settings-popup {
     position: absolute;
     top: $bar-height;
     right: 0;
@@ -95,7 +97,8 @@
 
 }
 
-.xyz-click-screen {
+.space-click-screen {
+  background-color: pink;
   position: relative;
   min-height: 100vh;
   min-width: 100vw;
@@ -182,4 +185,40 @@
 .xyz-player-container{
   position:relative;
   z-index:4
+}
+
+
+.space-svg-view{
+  height:100%;
+  width:800px;
+  width:100vw;
+}
+
+
+.expanded-popup {
+
+  height: 250px;
+
+
+    a {
+      max-height: 4rem;
+      overflow: hidden;
+      display: block;
+    }
+}
+
+#bar-logo{
+  position: absolute;
+  left:0;
+}
+
+#bar-title{
+  cursor: default;
+  margin-left:auto;
+  margin-right:auto;
+  width:20%;
+}
+#settings-button{
+  position: absolute;
+  right:0;
 }
