--- a/client/views/bar.html
+++ b/client/views/bar.html
@@ -1,17 +1,16 @@
-<div class="top-bar" layout="row" layout-align="space-between center">
+<div class="top-bar" >
 
-    <h1 ui-sref="base.landing" class="logo">XYZ</h1>
+    <h1 id="bar-logo" ui-sref="base.landing" class="logo">XYZ</h1>
 
 
-    <h1 class="bar-title" ng-if="title()"> {{title()}}
+    <h1 id="bar-title" ng-if="title()"> {{title()}}
         <a ng-if="space && space.id" >
             <md-icon class="icon-btn light" ng-click="playSpace(space)">play_arrow</md-icon>
 
         </a>
     </h1>
 
-
-    <md-icon class="icon-btn material-design-icons light"
+    <md-icon id="settings-button" class="icon-btn material-design-icons light"
              ng-class="{active:isEditing()}"
              ng-click="toggleSettings()"
              ng-if="User.get()">
@@ -19,7 +18,7 @@
     </md-icon>
     <div ng-if="!User.get()"></div>
 
-    <div class="user-settings" ng-if="settingsOpen()">
+    <div class="user-settings-popup" ng-if="settingsOpen()">
 
         <div ng-if="User.get().website"><!-- todo: fix website links (add http if not there) -->
             Logged in as<br/> <a ng-href="{{Utility.fixUrl(User.get().website)}}">{{User.get().name}}</a>
