fix user settings popup (hide social if disabled)

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -40,3 +40,17 @@
     opacity: 0.3;
   }
 }
+
+
+  .user-settings-popup {
+    background-color: black;
+    button, input {
+      color: black;
+    }
+    a {
+      color: $light-link;
+      &:hover {
+        color: $light-link-hover
+      }
+    }
+  }
