--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -82,11 +82,11 @@
 
   .user-settings-popup {
     position: absolute;
+    padding:1em;
     top: $bar-height;
     right: 0;
     width: 12em;
-    height: 50vh;
-    max-width: 50vw;
+    height: 22em;
     a {
       color: $light-link;
       &:hover {
@@ -116,7 +116,8 @@
 
 .main-container {
   height: 100vh;
-  top: $bar-height;
+  margin-top: $bar-height;
+  padding-top: 1.5em;
   border-bottom: 1px black solid;
   margin-bottom: 300px;
 
