--- a/client/views/bar.html
+++ b/client/views/bar.html
@@ -1,55 +1,61 @@
-<div class="top-bar" >
+<div class="top-bar">
 
-    <h1 id="bar-logo" ui-sref="base.landing" class="logo">XYZ</h1>
-
-
-    <h1 id="bar-title" ng-if="title()"> {{title()}}
-        <a ng-if="space && space.id" >
-            <md-icon class="icon-btn light" ng-click="playSpace(space)">play_arrow</md-icon>
-
-        </a>
-    </h1>
-
-    <md-icon id="settings-button" class="icon-btn material-design-icons light"
-             ng-class="{active:isEditing()}"
-             ng-click="toggleSettings()"
-             ng-if="User.get()">
-        settings
-    </md-icon>
-    <div id="signup-login-link" ng-if="!User.get()" ui-sref-active="hidden"> <a ui-sref="base.signup-login"> sign up / login </a></div>
-
-    <div class="user-settings-popup" ng-if="settingsOpen()">
-
-        <div ng-if="User.get().website"><!-- todo: fix website links (add http if not there) -->
-            Logged in as<br/> <a ng-href="{{Utility.fixUrl(User.get().website)}}">{{User.get().name}}</a>
-        </div>
-        <div ng-if="!User.get().website"><!-- todo: fix website links (add http if not there) -->
-            Logged in as<br/> {{User.get().name}}
-        </div>
-
-        <button ng-click="toggleEditing()">edit info</button>
-
-        <form ng-submit="User.update(new).catch(showError)" ng-show="userIsEditing()">
-
-            <input ng-model="new.name" placeholder="update name">
-            <input ng-model="new.website" placeholder="update website">
-            <input type="submit" value="update data">
-
-        </form>
+  <h1 id="bar-logo" ui-sref="base.landing" class="logo">XYZ</h1>
 
 
-        <h4>Social Media</h4>
-        <div ng-if="!Social.FB.isConnected() && !Social.FB.isConnecting() ">
-            Facebook: not connected
-            <a class="link-button" ng-click="Social.FB.setConnecting().then(Social.FB.login).then(Social.FB.refreshFB)">(connect)</a>
-        </div>
-        <div ng-if="Social.FB.isConnecting()">Facebook: connecting...</div>
-        <div ng-if="Social.FB.isConnected()">
-            Facebook: &#10003;
-        </div>
+  <h1 id="bar-title" ng-if="title()"> {{title()}}
+    <a ng-if="space && space.id">
+      <md-icon class="icon-btn light" ng-click="playSpace(space)">play_arrow</md-icon>
 
-        <button ng-click="User.logout().catch(showError)">Log out</button>
+    </a>
+  </h1>
+
+  <md-icon id="settings-button" class="icon-btn material-design-icons light"
+           ng-class="{active:isEditing()}"
+           ng-click="toggleSettings()"
+           ng-if="User.get()">
+    settings
+  </md-icon>
+  <div id="signup-login-link" ng-if="!User.get()" ui-sref-active="hidden"><a ui-sref="base.signup-login"> sign up /
+    login </a></div>
+
+  <div class="user-settings-popup" ng-if="settingsOpen()">
+
+    <div ng-if="User.get().website"><!-- todo: fix website links (add http if not there) -->
+      Logged in as<br/> <a ng-href="{{Utility.fixUrl(User.get().website)}}">{{User.get().name}}</a>
     </div>
+    <div ng-if="!User.get().website"><!-- todo: fix website links (add http if not there) -->
+      Logged in as<br/> {{User.get().name}}
+    </div>
+
+    <button ng-click="toggleEditing()">edit info</button>
+
+    <form ng-submit="User.update(new).catch(showError)" ng-show="userIsEditing()">
+
+      <input ng-model="new.name" placeholder="update name">
+      <input ng-model="new.website" placeholder="update website">
+      <input type="submit" value="save">
+
+    </form>
+
+
+    <div ng-if="Social.FB.enabled">
+
+    <h4>Social Media</h4>
+
+      <div ng-if="!Social.FB.isConnected() && !Social.FB.isConnecting() ">
+        Facebook: not connected
+        <a class="link-button" ng-click="Social.FB.setConnecting().then(Social.FB.login).then(Social.FB.refreshFB)">(connect)</a>
+      </div>
+      <div ng-if="Social.FB.isConnecting()">Facebook: connecting...</div>
+      <div ng-if="Social.FB.isConnected()">
+        Facebook: &#10003;
+      </div>
+
+    </div>
+
+    <button ng-click="User.logout().catch(showError)">Log out</button>
+  </div>
 </div>
 <md-progress-linear loading
                     class="loading-indicator"
