--- a/client/views/space.html
+++ b/client/views/space.html
@@ -57,7 +57,7 @@
 
       <div>
         <div media-preview-toggle="expandedItem()"></div>
-        <button ng-click="setFirstSong(expandedItem().id)">set first song</button>
+        <button ng-click="setFirstSong(expandedItem())">set first song</button>
         <button ng-click="removeSong(expandedItem().id)">remove</button>
       </div>
     </div>
