--- a/client/views/space.html
+++ b/client/views/space.html
@@ -93,4 +93,7 @@
   </div>
 
 </div>
+
+<div ui-view="sidebar" class="sidebar-container">
+</div>
 <pre class="debug right-panel" ng-if="debug">{{space | json}}</pre>
