--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -221,7 +221,7 @@
   width:50%;
   text-align: center;
 }
-.bar-icons, #signup-login-link{
+.bar-icons {
   position: absolute;
   right:0;
   top:0;
