dont try to save new dot position unless user has access

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -13,6 +13,7 @@
          space-id="{{getPlayingSpace().id}}"
          data-space="{{getPlayingSpace()}}"
          playlist="Playlister.list"
+         data-viewer="viewer"
          ng-show="getPlayingSpace()">
 
     </div>
