--- a/client/views/space.html
+++ b/client/views/space.html
@@ -96,4 +96,5 @@
 
 <div ui-view="sidebar" class="sidebar-container">
 </div>
-<pre class="debug right-panel" ng-if="debug">{{space | json}}</pre>
+<pre class="debug right-panel" ng-if="debug">Playlister.List: {{Playlister.getList() | json}}</pre>
+<pre class="debug right-panel" ng-if="debug">space songs: {{space.songs | json}}</pre>
