fix showing line

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -36,12 +36,8 @@
 
 .xyz-item {
 
-  .dot {
-    border-radius: 2em;
-    border: 2px solid rgba(200, 200, 200, 0.6);
-  }
 
-  .unavailable.dot {
+  &.unavailable {
     opacity: 0.3;
   }
 }
