--- a/client/views/sidebar/sidebar-search-result.html
+++ b/client/views/sidebar/sidebar-search-result.html
@@ -1,21 +1,25 @@
+<link rel="stylesheet" href="../../css/main.css">
 <div class="search-result" layout="row">
-  <div layout="column" class="search-result-actions">
-    <button class="add" ng-if="!item.error && isMedia(item)" ng-click="putInSpace(item, $event)">
-      add
-    </button>
-    <button class="add" ng-if="isSoundcloudArtist(item)" ng-click="MediaAPI.soundcloud.tracksByUser(item.provider_id)
+  <div layout="column" class="search-result-actions" layout-align="space-around center">
+    <div>
+      <md-icon class="icon-btn" ng-if="!item.error && isMedia(item)" ng-click="putInSpace(item, $event)">
+        add
+      </md-icon>
+    </div>
+    <button class="icon-btn" ng-if="isSoundcloudArtist(item)" ng-click="MediaAPI.soundcloud.tracksByUser(item.provider_id)
         .then(updateImportView)
         .catch(invalidLink)">
-      artist tracks
+      tracks
     </button>
     <button class="add" ng-if="isSoundcloudArtist(item)" ng-click="MediaAPI.soundcloud.likesByUser(item.provider_id)
         .then(updateImportView)
         .catch(invalidLink)">
-      artist likes
+      likes
     </button>
     <div media-preview-toggle="item"></div>
-
   </div>
+
+
   <div layout="column"
        class="search-result-details"
        flex="grow"
@@ -45,7 +49,7 @@
 
   <div ng-if="Player.isPlaying(item.provider_id)"
        media-preview flex="grow"></div>
-  <div>
+  <div ng-hide="Player.playingItem().provider_id === item.provider_id">
     <img class='thumbnail' ng-src="{{item.pic}}" width="200"/>
   </div>
 
