--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -147,9 +147,9 @@
   }
 
   .selector-container {
-    height:100vh;
+    height: 100vh;
     padding-bottom: 1000px;
-    overflow:scroll;
+    overflow: scroll;
   }
 
 }
@@ -164,8 +164,24 @@
 
 .search-result {
 
+  max-height: 200px;
+  margin-bottom: 0.5em;
+
   .media-preview {
     height: 100%;
+    min-height:150px;
+  }
+}
+
+.search-result-details {
+  padding: 0.5em;
+  min-height: 150px;
+
+  .artist {
+    margin-bottom: 0.5em;
+  }
+  .title {
+    font-size: 0.9rem;
   }
 }
 
