--- a/client/views/base.html
+++ b/client/views/base.html
@@ -4,6 +4,8 @@
   <toast></toast>
   <div ui-view="main" class="main-container"></div>
 
+  <div ui-view="sidebar" class="sidebar-container">
+  </div>
   <div ui-view="xyzPlayer"></div>
 
   <div class="xyz-player-container"
