sitewide player close button working (fixes #137), also has a link

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -12,7 +12,7 @@
        ng-controller="SiteWidePlayerCtrl">
     <div xyz-player
          space-id="{{getPlayingSpace().id}}"
-         data-space="{{getPlayingSpace()}}"
+         data-space-name="getPlayingSpace().name"
          playlist="Playlister.list"
          data-viewer="viewer"
          ng-show="getPlayingSpace()">
