--- a/xyz-player-component/xyz-component-style-app-only.scss
+++ b/xyz-player-component/xyz-component-style-app-only.scss
@@ -42,6 +42,14 @@
     }
   }
 
+  .media-title {
+    a, a:visited, a:active, a:hover {
+      color: white;
+    }
+    position:absolute;
+    right:0;
+  }
+
 }
 
 .player-title{
